# eventyay-hubspot

./: .env.hubspot.sample  .gitignore  .gitlab-ci.yml  .install-hooks.sh  .pre-commit-config.yaml  .update-locales.sh  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
hubspot/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  utils.py  views.py
hubspot/locale/de/LC_MESSAGES/: django.po
hubspot/migrations/: 0001_initial.py  0002_hubspotoauthtoken_hub_name_auditlog.py
hubspot/templates/hubspot/: settings_landing.html
tests/: conftest.py  test_main.py  test_oauth.py  test_services.py  test_template.py  test_views.py
